# claude-orchestra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LAUNCH_STATUS.md  LICENSE  README.md  STORY.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: DEMO_SCRIPT.md  LAUNCH.md  LAUNCH_READY.md  OUTREACH_MESSAGES.md  QUICKSTART.md  RELEASE_v0.2.0-alpha.md  ROADMAP.md  TARGET_USERS.md  TWITTER_PLAYBOOK.md
examples/: config_template.json  parallel_feature_dev.sh  performance_sprint.sh
orchestra/: __init__.py  cli.py  config.py
orchestra/core/: __init__.py  agent.py  session.py  state.py  worktree.py
orchestra/dashboard/: __init__.py  server.py
tests/: test_cli.py  test_session.py  test_worktree.py
