[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-orchestra"
version = "0.2.0a1"
description = "The lightweight Claude orchestrator - session discovery, parallel agents, zero setup"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MorningGuard Team" }
]
keywords = ["claude", "ai", "agents", "orchestration", "git", "worktree", "session", "claude-code", "lightweight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
orchestra = "orchestra.cli:main"

[project.urls]
Homepage = "https://github.com/alanxurox/claude-orchestra"
Repository = "https://github.com/alanxurox/claude-orchestra"
Issues = "https://github.com/alanxurox/claude-orchestra/issues"

[tool.hatch.build.targets.wheel]
packages = ["orchestra"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - HTML templates in server.py exceed limit
